--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,10 @@
-<div class="container-fluid" style="background: #333A40; position: fixed; margin-top: 20px; padding-bottom:0; position: absolute; z-index: 1000; ">
+<div class="container-fluid" style="background: #333A40; position: fixed; margin-top: 25px; padding-bottom:0; position: absolute; z-index: 1000; ">
 
 	<!-- <div class="row"> -->
 		<!-- <div class="col-md-12"> -->
-			<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+			<nav class="navbar-expand-md navbar-dark bg-dark">
 
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<button class="navbar-toggler" style="margin-top:12px; " type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
 				</button> <a class="navbar-brand" href="#"><span class="customFont">Riding Retro Radio</span></a>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -23,7 +23,7 @@
 						</li>
 
 					</ul>
-					<ul class="navbar-nav ml-md-auto" style="float:right;">
+					<ul class="navbar-nav" style="float:right;">
 						<li class="nav-item">
 							 <a class="credit-amount nav-link">Credits:<span id="creditValue"><%-credit%></span>
 
@@ -34,7 +34,7 @@
 						<li class="nav-item dropdown">
 							 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown">More</a>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-								 <a class="dropdown-item" href="/logout">Logout</a> <a class="dropdown-item" href="#">Another action</a>
+								 <a class="dropdown-item" href="/logout">Logout</a> <a class="dropdown-item" href="http://www.ridingretroradio.com">Leave Beta Site</a>
 								<div class="dropdown-divider">
 								</div> <a class="dropdown-item" href="mailto:ridingretroradio@post.com?Subject=Website%20Help">Need Help? Contact Us</a>
 							</div>
@@ -44,5 +44,5 @@
 			</nav>
 		<!-- </div> -->
 	<!-- </div> -->
-</div>
+
 </div>
