--- a/views/home2.ejs
+++ b/views/home2.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/navbar') %>
 
 
-<div class="page" style="z-index: 1; position: absolute;">
+<div style="z-index: 1; position: absolute;">
 
 
   <br />
