--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -120,7 +120,8 @@
   });
 
   // Set the date we're counting down to
-  var countDownDate = new Date("Feb 13, 2019 23:50:00").getTime();
+  /////////////////?TAKEOVER COUNTDOWN SETTING
+  var countDownDate = new Date("Feb 14, 2019 14:00:00").getTime();
 
   // Update the count down every 1 second
   var x = setInterval(function() {
