--- a/views/home2.ejs
+++ b/views/home2.ejs
@@ -46,6 +46,15 @@
       <div class="col-md-2">
       </div>
     </div>
+    <div class="row" style="margin-top:15px">
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-4" id="shoutout">
+        <a href="/choppingBlock">
+        <img class="bigSquareButton col-md-12 align=" center" src="https://github.com/musicis3965/RRRresources/blob/master/choppingBlockButton.png?raw=true" alt="choppingBlockButton">
+        </a>
+        <p class="display-3" style="color: white; font-size: 3rem; text-shadow: 2px 2px 8px #111111;"><strong>No Credits Required</strong></p>
+      </div>
   </div>
   <br />
   <br />
