--- a/views/songrequests.ejs
+++ b/views/songrequests.ejs
@@ -268,6 +268,48 @@
     <li><a href="#" onclick="reply_click(this)" songInfo="Backstreet Boys - Shape of My Heart">Backstreet Boys - Shape of My Heart</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Barenaked Ladies - One Week">Barenaked Ladies - One Week</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Beck - Loser">Beck - Loser</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Beyonce - Halo">Beyonce - Halo</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Billy Joel - The River of Dreams">Billy Joel - The River of Dreams</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Blackstreet, Dr. Dre, Queen Pen - No Diggity">Blackstreet, Dr. Dre, Queen Pen - No Diggity</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="blink-182 - All The Small Things">blink-182 - All The Small Things</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="blink-182 - I Miss You">blink-182 - I Miss You</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="blink-182 - Wat's My Age Again">blink-182 - Wat's My Age Again</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Blues Traveler - Hook">Blues Traveler - Hook</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Blur - Song 2">Blur - Song 2</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Bowling For Soup - Stacy's Mom">Bowling For Soup - Stacy's Mom</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Breaking Benjamin - The Diary Of Jane">Breaking Benjamin - The Diary Of Jane</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - ...Baby One More Time">Britney Spears - ...Baby One More Time</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - (You Drive Me) Crazy">Britney Spears - (You Drive Me) Crazy</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - Gimme More">Britney Spears - Gimme More</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - Oops!...I Did It Again">Britney Spears - Oops!...I Did It Again</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - Piece of Me">Britney Spears - Piece of Me</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - Sometimes">Britney Spears - Sometimes</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - Toxic">Britney Spears - Toxic</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Britney Spears - Womanizer">Britney Spears - Womanizer</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Bruno Mars - Gernade"> Bruno Mars - Gernade</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Bruno Mars - Marry You">Bruno Mars - Marry You</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Cage the Elephant - Ain't No Rest For the Wicked">Cage the Elephant - Ain't No Rest For the Wicked</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Cake - The Distance">Cake - The Distance</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Cascada - Evacuate the Dancefloor">Cascada - Evacuate the Dancefloor</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Cascada - Everytime We Touch">Cascada - Everytime We Touch</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Celine Dion - Because You Loved Me">Celine Dion - Because You Loved Me</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Celine Dion - My Heart Will Go On">Celine Dion - My Heart Will Go On</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Charli XCX - Boom Clap">Charli XCX - Boom Clap</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Cher Lloyd - Want U Back">Cher Lloyd - Want U Back</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Chris Cornell - Scream">Chris Cornell - Scream</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Christina Aguilera - Genie in a Bottle">Christina Aguilera - Genie in a Bottle</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Christina Aguilera - What a Girl Wants">Christina Aguilera - What a Girl Wants</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Chumbawamba - Tubthumping">Chumbawamba - Tubthumping</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Ciara, Missy Elliott - One, Two Step">Ciara, Missy Elliott - One, Two Step</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Coldplay - Paradise">Coldplay - Paradise</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Coldplay - Viva La Vida">Coldplay - Viva La Vida</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Coldplay - Yellow">Coldplay - Yellow</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Corona - The Rhythm of the Night">Corona - The Rhythm of the Night</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Counting Crows - Mr. Jones">Counting Crows - Mr. Jones</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Counting Crows, Vanessa Carlton - Big Yellow Taxi">Counting Crows, Vanessa Carlton - Big Yellow Taxi</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Crazy Town - Butterfly">Crazy Town - Butterfly</a></li>
+    <!-- <li><a href="#" onclick="reply_click(this)" songInfo=" "> </a></li> -->
+
   </ul>
   <ul id="perminant">
     <li><a href="https://form.jotform.com/90425651008148">Can't find song? Submit here for next time!</a></li>
