--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -120,7 +120,7 @@
   });
 
   // Set the date we're counting down to
-  /////////////////?TAKEOVER COUNTDOWN SETTING
+  /////////////////?TAKEOVER COUNTDOWN SETTINdG
   var countDownDate = new Date("Feb 25, 2019 16:00:00").getTime();
 
   // Update the count down every 1 second
