--- a/views/songrequests.ejs
+++ b/views/songrequests.ejs
@@ -308,7 +308,42 @@
     <li><a href="#" onclick="reply_click(this)" songInfo="Counting Crows - Mr. Jones">Counting Crows - Mr. Jones</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Counting Crows, Vanessa Carlton - Big Yellow Taxi">Counting Crows, Vanessa Carlton - Big Yellow Taxi</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Crazy Town - Butterfly">Crazy Town - Butterfly</a></li>
-    <!-- <li><a href="#" onclick="reply_click(this)" songInfo=" "> </a></li> -->
+    <li><a href="#" onclick="reply_click(this)" songInfo="David Guetta - Sexy Bitch (feat. Akon)">David Guetta - Sexy Bitch (feat. Akon)</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="David Guetta, Kelly Rowland - When Love Takes Over (feat. Kelly Rowland)">David Guetta, Kelly Rowland - When Love Takes Over (feat. Kelly Rowland)</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="David Guetta, Kid Cudi - Memories (feat. Kid Cudi)">David Guetta, Kid Cudi - Memories (feat. Kid Cudi)</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="David Guetta, Sia - Titanium">David Guetta, Sia - Titanium</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Days Of The New - Touch, Peel And Stand">Days Of The New - Touch, Peel And Stand</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Deep Blue Something - Breakfast At Tiffany's">Deep Blue Something - Breakfast At Tiffany's</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Default - Wasting My Time">Default - Wasting My Time</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Demi Lovato - Neon Lights">Demi Lovato - Neon Lights</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Demi Lovato - Sober">Demi Lovato - Sober</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Demi Lovato - Sorry Not Sorry">Demi Lovato - Sorry Not Sorry</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Des'ree - You Gotta Be">Des'ree - You Gotta Be</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Destiny's Child - Bills, Bills, Bills">Destiny's Child - Bills, Bills, Bills</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Destiny's Child - Jumpin', Jumpin'">Destiny's Child - Jumpin', Jumpin'</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Destiny's Child - Say My Name">Destiny's Child - Say My Name</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="DEV - In The Dark">DEV - In The Dark</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="DEV, Enrique Iglesias - Naked">DEV, Enrique Iglesias - Naked</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Diddy - Dirty Money, Skylar Grey - Coming Home">Diddy - Dirty Money, Skylar Grey - Coming Home</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Dinosaur Pile-Up - 11 11 - Radio Edit">Dinosaur Pile-Up - 11 11 - Radio Edit</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Dishwalla - Counting Blue Cars">Dishwalla - Counting Blue Cars</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Dixie Chicks - Cowboy Take Me Away">Dixie Chicks - Cowboy Take Me Away</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Dizzee Rascal, Calvin Harris - Hype">Dizzee Rascal, Calvin Harris - Hype</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="DJ Jazzy Jeff & The Fresh Prince - The Fresh Prince of Bel-Air">DJ Jazzy Jeff & The Fresh Prince - The Fresh Prince of Bel-Air</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="DNCE - TV In The Morning">DNCE - TV In The Morning</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Drake - Hotline Bling">Drake - Hotline Bling</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Dream - He Loves You Not">Dream - He Loves You Not</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Dua Lipa - New Rules">Dua Lipa - New Rules</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Eagle-Eye Cherry - Save Tonight">Eagle-Eye Cherry - Save Tonight</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Eiffel 65 - Blue (Da Ba Dee) - DJ Ponte Ice Pop Radio">Eiffel 65 - Blue (Da Ba Dee) - DJ Ponte Ice Pop Radio</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Ellie Goulding - Lights - Single Version">Ellie Goulding - Lights - Single Version</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Elton John - I Just Can't Wait to be King">Elton John - I Just Can't Wait to be King</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - All the Boys Want">Emily Osment - All the Boys Want</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Drift">Emily Osment - Drift</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Let's Be Friends"> </a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Lovesick">Emily Osment - Lovesick</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Marisol"> </a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo=" "> </a></li>
 
   </ul>
   <ul id="perminant">
