--- a/views/songrequests.ejs
+++ b/views/songrequests.ejs
@@ -340,10 +340,10 @@
     <li><a href="#" onclick="reply_click(this)" songInfo="Elton John - I Just Can't Wait to be King">Elton John - I Just Can't Wait to be King</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - All the Boys Want">Emily Osment - All the Boys Want</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Drift">Emily Osment - Drift</a></li>
-    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Let's Be Friends"> </a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Let's Be Friends">Emily Osment - Let's Be Friends</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Lovesick">Emily Osment - Lovesick</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Marisol"> </a></li>
-    <li><a href="#" onclick="reply_click(this)" songInfo=" "> </a></li>
+    <!-- <li><a href="#" onclick="reply_click(this)" songInfo=" "> </a></li> -->
 
   </ul>
   <ul id="perminant">
