update song list

--- a/views/songrequests.ejs
+++ b/views/songrequests.ejs
@@ -342,7 +342,46 @@
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Drift">Emily Osment - Drift</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Let's Be Friends">Emily Osment - Let's Be Friends</a></li>
     <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Lovesick">Emily Osment - Lovesick</a></li>
-    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Marisol"> </a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Emily Osment - Marisol">Emily Osment - Marisol</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Enrique Iglesias - Bailamos">Enrique Iglesias - Bailamos</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Eve 6 - Inside Out">Eve 6 - Inside Out</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Demi Lovato - Cool for the Summer">Demi Lovato - Cool for the Summer</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Lady Gaga - Swine">Lady Gaga - Swine</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Mike Shinoda - Over Again">Mike Shinoda - Over Again</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Faith No More - Epic">Faith No More - Epic</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - Centuries">Fall Out Boy - Centuries</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - Champion">Fall Out Boy - Champion</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - I Don't Care">Fall Out Boy - I Don't Care</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - My Songs Know What">Fall Out Boy - My Songs Know What</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - Sugar, We're Goin Down">Fall Out Boy - Sugar, We're Goin Down</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - This Ain't A Scene, It's An Arms Race">Fall Out Boy - This Ain't A Scene, It's An Arms Race</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - Thnks fr th Mmrs">Fall Out Boy - Thnks fr th Mmrs</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - Uma Thurman">Fall Out Boy - Uma Thurman</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fall Out Boy - Young and Menace">Fall Out Boy - Young and Menace</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Far East Movement, Ryan Tedder - Rocketeer">Far East Movement, Ryan Tedder - Rocketeer</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fastball - Just Another Dream">Fastball - Just Another Dream</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Finger Eleven - Paralyzer">Finger Eleven - Paralyzer</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fiona Apple - Criminal">Fiona Apple - Criminal</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Five, Cutfather & Joe - When the Lights Go Out">Five, Cutfather & Joe - When the Lights Go Out</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Flo Rida, Nelly Furtado - Jump (feat. Nelly Furtado)">Flo Rida, Nelly Furtado - Jump (feat. Nelly Furtado)</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Flyleaf - All Around Me">Flyleaf - All Around Me</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Flyleaf - I'm So Sick">Flyleaf - I'm So Sick</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Foo Fighters - Everlong">Foo Fighters - Everlong</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Foo Fighters - Learn to Fly">Foo Fighters - Learn to Fly</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Framing Hanley - Lollipop">Framing Hanley - Lollipop</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Frankie Valli & The Four Seasons - December, 1963">Frankie Valli & The Four Seasons - December, 1963</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Fuel - Shimmer">Fuel - Shimmer</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Garbage - Only Happy When It Rains">Garbage - Only Happy When It Rains</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="George Michael - Freedom! '90">George Michael - Freedom! '90</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Gina G. - Ooh Aah...Just A Little Bit">Gina G. - Ooh Aah...Just A Little Bit</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Giorgio Moroder - Tom's Diner ft Britney Spears">Giorgio Moroder - Tom's Diner ft Britney Spears</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Gnarls Barkley - Crazy">Gnarls Barkley - Crazy</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Goldfrapp - Strict Machine">Goldfrapp - Strict Machine</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="Gorillaz - Feel Good Inc">Gorillaz - Feel Good Inc</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="grandson - Bills">grandson - Bills</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="grandson - Blood//Water - Tom Morello Remix">grandson - Blood//Water - Tom Morello Remix</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="grandson - Kiss Bang">grandson - Kiss Bang</a></li>
+    <li><a href="#" onclick="reply_click(this)" songInfo="grandson - War">grandson - War</a></li>
     <!-- <li><a href="#" onclick="reply_click(this)" songInfo=" "> </a></li> -->
 
   </ul>
