--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -100,7 +100,7 @@
 
 
   $(document).on("click", ".downVote", function() {
-    // var input = $(this).parent().find('.voteValue');
+    // lvar input = $(this).parent().find('.voteValue');
     // var valueNew = parseInt(input.val(), 10);
     // value = isNaN(valueNew) ? 0 : valueNew;
     // valueNew++;
